# Name-Picker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: code_test.yml
src/: main.rs
