[package]
name = "Name-Picker"
version = "0.1.0"
authors = ["MODcraft <admin@ncgs.top>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
rand = { git = "https://github.com/rust-lang-nursery/rand" }
lazy_static = "1.4.0"